--- a/project1.html
+++ b/project1.html
@@ -3,9 +3,9 @@
 
    <title>Simple Website</title>
    <head>
-<body background="./photos/background.jpg">
+<body background="./cartoon.jpg">
     <h2>
-     <img src="./photos/cartoon.jpg" width="7%">
+     <img src="./background1.jpg" width="7%">
      <font COLOR="brown" size="10">
       &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u> HTML MINI PROJECT</u><br>
      </font>  
@@ -70,7 +70,7 @@
       <iframe src="" height="350px" width="450px" name="some"></iframe>
     <h3><a href="./auido.mp3" target="some">AUDIO</a></h3>
     <h3><a href="./viedo.mp4" target="some">VIDEO</a></h3>
-    <h3><a href="./photos/jaabllamma.jpg" target="some" length="100px" width="100px">IMAGE</a></h3>
+    <h3><a href="./jaabilamma.jpg" target="some" length="100px" width="100px">IMAGE</a></h3>
     <h3><a href="https://ibommaone.in/" target="some">WEB PAGE</a></h3>
     <a href="" target="some" image=""></a>
             </td>
